# D3D12Renderer

./: .gitignore  CMakeLists.txt  conanfile.txt
Resources/: Cube.mtl  Suzanne.mtl
src/: Application.cpp  Application.h  CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
src/Core/: Application.cpp  Application.h  Logger.cpp  Logger.h
src/Graphics/: BlurFilter.cpp  BlurFilter.h  Camera.cpp  Camera.h  Direct3D.cpp  Direct3D.h  FrameResources.cpp  FrameResources.h  MaterialManager.cpp  MaterialManager.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PipelineManager.cpp  PipelineManager.h  SceneLight.cpp  SceneLight.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  Vertex.h
src/Graphics/Interfaces/: ICamera.h
src/Graphics/Utils/: BatchRenderer.cpp  BatchRenderer.h  D3DObject.h  DDSTextureLoader.cpp  RayTracingStructures.h  UpdateObject.h  UploadBuffer.h  Utils.cpp  Utils.h
src/Graphics/imgui/: imgui_impl_dx12.cpp
src/Input/: Keyboard.cpp  Mouse.cpp
src/Shaders/Common/: Utils.hlsli
src/Shaders/DXR/: Basic.rt.hlsl
src/Shaders/Debug/: Common.hlsli  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/HorizontalBlurPipeline/: ComputeShader.hlsl
src/Shaders/InstancedColorMaterialLightPipeline/: Common.hlsli  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/InstancedMaterialLightPipeline/: Common.hlsli  VertexShader.hlsl
src/Shaders/MaterialLightPipeline/: Common.hlsli  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/MaterialSimplePipeline/: Common.hlsli  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/RawTexturePipeline/: Common.hlsli  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/SimpleColorPipeline/: Common.hlsli  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/TerrainPipeline/: Common.hlsli  DomainShader.hlsl  HullShader.hlsl  PixelShader.hlsl  VertexShader.hlsl
src/Shaders/VerticalBlurPipeline/: ComputeShader.hlsl
src/common/: CommonMath.h  Events.h  Exceptions.h  ISingletone.h  Oblivion.h  Result.h  TypeOutput.h
